Unified session names.

--- a/cuda/tracer_cuda.sh.in
+++ b/cuda/tracer_cuda.sh.in
@@ -30,12 +30,12 @@ lttng-sessiond --daemonize --quiet
 if [ ! -z "$lttng_view" ]
 then
   lttng-relayd --daemonize
-  lttng create my-userspace-ze-session --live
+  lttng create thapi-cuda-session --live
 else
-  lttng create my-userspace-ze-session
+  lttng create thapi-cuda-session
 fi
 lttng enable-channel --userspace --blocking-timeout=inf blocking-channel
-lttng add-context --userspace --channel=blocking-channel -t vtid -t pthread_id
+lttng add-context --userspace --channel=blocking-channel -t vpid -t vtid
 lttng enable-event --channel=blocking-channel --userspace lttng_ust_cuda:*
 if [ ! -z "$cudart" ]
 then
