--- a/opencl/clprof.sh.in
+++ b/opencl/clprof.sh.in
@@ -20,7 +20,7 @@ whichlib() {
 trace() {
     quiet="--quiet"
     lttng-sessiond --daemonize $quiet
-    lttng $quiet create clprof                                      
+    lttng $quiet create thapi-opencl-session
     #Using blocking more to trace event record loss
     lttng $quiet enable-channel --userspace --blocking-timeout=inf blocking-channel     
 
@@ -54,7 +54,7 @@ trace_epilogue() {
 
 summary() {
     if [ -z "$path" ]; then
-        lltng_last_session=$(ls -dt $HOME/lttng-traces/clprof* | head -1)
+        lltng_last_session=$(ls -dt $HOME/lttng-traces/thapi-opencl-session* | head -1)
         echo "Trace location " $lltng_last_session
         echo
     else
