--- a/cuda/Makefile.am
+++ b/cuda/Makefile.am
@@ -12,13 +12,16 @@ CUDA_PROBES_SRC = \
 	cuda_tracepoints.c
 
 CUDA_STATIC_PROBES_TP = \
-	cuda_args.tp
+	cuda_args.tp \
+	cuda_profiling.tp
 
 CUDA_STATIC_PROBES_INCL = \
-	cuda_args.h
+	cuda_args.h \
+	cuda_profiling.h
 
 CUDA_STATIC_PROBES_SRC = \
-	cuda_args.c
+	cuda_args.c \
+	cuda_profiling.c
 
 CUDART_PROBES_TP = \
 	cudart_tracepoints.tp
@@ -145,6 +148,9 @@ cudart_tracepoints.tp: $(srcdir)/gen_cudart_tracepoints.rb $(CUDART_MODEL) gen_p
 
 cuda_args.tp: $(srcdir)/gen_cuda_custom_probes.rb $(CUDA_MODEL)
 	SRC_DIR=$(srcdir) $(RUBY) $(srcdir)/gen_cuda_custom_probes.rb lttng_ust_cuda_args > $@
+
+cuda_profiling.tp: $(srcdir)/gen_cuda_custom_probes.rb $(CUDA_MODEL)
+	SRC_DIR=$(srcdir) $(RUBY) $(srcdir)/gen_cuda_custom_probes.rb lttng_ust_cuda_profiling > $@
 
 %.h %.c: %.tp
 	$(LTTNG_GEN_TP) $< -o $*.c -o $*.h
