--- a/cuda/tracer_cuda.sh.in
+++ b/cuda/tracer_cuda.sh.in
@@ -21,6 +21,7 @@ while true; do
   case "$1" in
     --cudart) shift; cudart=1;;
     -a | --arguments ) shift; arguments=1;;
+    -p | --profiling ) shift; profiling=1; LTTNG_UST_CUDA_PROFILE=1;;
     -v | --visualize ) shift; lttng_view=1;;
     -- ) shift; break ;;
     * ) break ;;
@@ -44,6 +45,10 @@ fi
 if [ ! -z "$arguments" ]
 then
   lttng enable-event --channel=blocking-channel --userspace lttng_ust_cuda_args:*
+fi
+if [ ! -z "$profiling" ]
+then
+  lttng enable-event --channel=blocking-channel --userspace lttng_ust_cuda_profiling:*
 fi
 if [ -z "$LTTNG_UST_CUDA_LIBCUDA" ]
 then
