--- a/opencl/supported_enums.yaml
+++ b/opencl/supported_enums.yaml
@@ -50,3 +50,4 @@
 - name: cl_device_partition_property_ext
 - name: cl_device_affinity_domain_ext
 - name: cl_mem_migration_flags_ext
+- name: cl_device_unified_shared_memory_capabilities_intel
