Fixes for arm 64 ubuntu 18.04.5.

--- a/cuda/babeltrace_cuda.in
+++ b/cuda/babeltrace_cuda.in
@@ -38,7 +38,7 @@ traces.each { |t|
 
 it = c.iter_create
 it.each { |ev|
-  name = events[ev.handle_id][ev.id]
+  name = ev.name
   str = "#{ev.timestamp.strftime("%H:%M:%S.%9L")}"
   str << " - " << ev.top_level_scope(:STREAM_EVENT_CONTEXT).value.collect { |k, v| "#{k}: #{v}" }.join(", ") if $options[:context]
   str << " - #{name}: "
