Correct name trace

--- a/opencl/clprof.sh.in
+++ b/opencl/clprof.sh.in
@@ -50,7 +50,7 @@ trace_and_summary() {
     fi
 
     lttng-sessiond $quiet --daemonize
-    lttng $quiet create iprof
+    lttng $quiet create thapi-opencl-session
     #Using blocking more to trace event record loss
     lttng $quiet enable-channel --userspace --blocking-timeout=inf blocking-channel
 
@@ -86,7 +86,7 @@ trace_epilogue() {
 
 summary() {
     if [ -z "$@" ]; then
-        lltng_last_session=$(ls -dt $HOME/lttng-traces/* | head -1)
+        lltng_last_session=$(ls -dt $HOME/lttng-traces/thapi-opencl-session* | head -1)
         echo "Trace location:" $lltng_last_session
         echo
     else
