--- a/opencl/clprof.sh.in
+++ b/opencl/clprof.sh.in
@@ -5,7 +5,7 @@ bindir=@bindir@
 pkglibdir=$libdir/@PACKAGE@
 
 display_help() {
-    echo "$(basename $0): a tracer / summarizer of OpenCL and L0 Calls"
+    echo "$(basename $0): a tracer / summarizer of OpenCL calls"
     echo "Usage:"
     echo " $(basename $0) -h | --help "
     echo " $(basename $0) [option]... <application> <application-arguments>"
@@ -51,6 +51,7 @@ trace_and_summary() {
 
     lttng-sessiond $quiet --daemonize
     lttng $quiet create thapi-opencl-session
+
     #Using blocking more to trace event record loss
     lttng $quiet enable-channel --userspace --blocking-timeout=inf blocking-channel
 
@@ -86,33 +87,32 @@ trace_epilogue() {
 
 summary() {
     if [ -z "$@" ]; then
-        lltng_last_session=$(ls -dt $HOME/lttng-traces/thapi-opencl-session* | head -1)
-        echo "Trace location:" $lltng_last_session
+        lttng_last_session=$(ls -dt $HOME/lttng-traces/thapi-opencl-session* | head -1)
+        echo "Trace location:" $lttng_last_session
         echo
     else
-        lltng_last_session=$@
+        lttng_last_session=$@
     fi
     # Check that the argument are trace.
-    # We don't quote the $lltng_last_session, to be able to loop over hit.
+    # We don't quote the $lttng_last_session, to be able to loop over hit.
     # Should be cleaner to use bash arrays.
-    for f in  $lltng_last_session; do
+    for f in  $lttng_last_session; do
         if [ ! -d "$f" ]; then
             echo "$f is not a trace folder"
             exit 1
         fi
-   done
+    done
 
     if [ -n "$trace" ]; then
         # Todo filter direcly in the babeltrace
-        $bindir/babeltrace_opencl $lltng_last_session | grep lttng_ust_opencl
+        $bindir/babeltrace_opencl $lttng_last_session | grep lttng_ust_opencl
     fi
 
-    ocl_output=$(babeltrace2 --plugin-path=$libdir --component=sink.clprof.dispatch  --params="display=$display" ${lltng_last_session})
+    ocl_output=$(babeltrace2 --plugin-path=$libdir --component=sink.clprof.dispatch  --params="display=$display" ${lttng_last_session})
     if [ -n "$ocl_output" ]; then
         echo "== OpenCL == "
         echo "$ocl_output"
     fi
-
 }
 
 #  _
