--- a/utils/xprof.sh.erb.in
+++ b/utils/xprof.sh.erb.in
@@ -5,7 +5,13 @@ bindir=@bindir@
 pkglibdir=$libdir/@PACKAGE@
 
 display_help() {
+<% if languages.include?("opencl") and  languages.include?("ze")%>
+    echo "$(basename $0): a tracer / summarizer of OpenCL and L0 calls"
+<% elsif languages.include?("opencl") %>
+    echo "$(basename $0): a tracer / summarizer of OpenCL calls"
+<% elsif languages.include?("ze") %>
     echo "$(basename $0): a tracer / summarizer of L0 calls"
+<% end %>
     echo "Usage:"
     echo " $(basename $0) -h | --help "
     echo " $(basename $0) [option]... <application> <application-arguments>"
@@ -50,28 +56,57 @@ trace_and_summary() {
     fi
 
     lttng-sessiond $quiet --daemonize
+<% if languages.include?("opencl") and  languages.include?("ze")%>
+    lttng $quiet create iprof
+<% elsif languages.include?("opencl") %>
+    lttng $quiet create thapi-opencl-session
+<% elsif languages.include?("ze") %>
     lttng $quiet create thapi-ze-session
+<% end %>
 
     #Using blocking more to trace event record loss
     lttng $quiet enable-channel --userspace --blocking-timeout=inf blocking-channel
 
+<% if languages.include?("opencl") %>
+    lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_opencl:*
+    lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_opencl_build:infos*
+    lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_opencl_profiling:*
+    lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_opencl_arguments:kernel_info
+    lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_opencl_devices:device_name
+<% end %>
+<% if languages.include?("ze") %>
     lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_ze:*
     lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_zet:*
     export LTTNG_UST_ZE_PROFILE=1
     lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_ze_profiling:*
     lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_ze_properties:*
+<% end %>
 
     lttng $quiet add-context --userspace --channel=blocking-channel -t vpid -t vtid
 
     #Preventing trace event record loss
+<% if languages.include?("opencl") %>
+    if [ -z "$LTTNG_UST_OPENCL_LIBOPENCL" ]
+    then
+      export LTTNG_UST_OPENCL_LIBOPENCL=$(whichlib libOpenCL.so | head -n 1)
+    fi
+<% end %>
+<% if languages.include?("ze") %>
     if [ -z "$LTTNG_UST_ZE_LIBZE_LOADER" ]
     then
       export LTTNG_UST_ZE_LIBZE_LOADER=$(whichlib libze_loader.so | head -n 1)
     fi
+<% end %>
     #Preventing trace event record loss
     export LTTNG_UST_ALLOW_BLOCKING=1
+<% if languages.include?("opencl") %>
+    export LD_PRELOAD=$libdir/libTracerOpenCL.so:$LD_PRELOAD
+    export LD_LIBRARY_PATH=$pkglibdir/opencl:$LD_LIBRARY_PATH
+<% end %>
+<% if languages.include?("ze") %>
     export LD_PRELOAD=$libdir/libTracerZE.so:$LD_PRELOAD
     export LD_LIBRARY_PATH=$pkglibdir/ze:$LD_LIBRARY_PATH 
+<% end %>
 
     lttng $quiet start
     trap 'trace_epilogue' EXIT SIGABRT SIGSEGV
@@ -87,7 +122,13 @@ trace_epilogue() {
 
 summary() {
     if [ -z "$@" ]; then
+<% if languages.include?("opencl") and  languages.include?("ze")%>
+        lttng_last_session=$(ls -dt $HOME/lttng-traces/* | head -1)
+<% elsif languages.include?("opencl") %>
+        lttng_last_session=$(ls -dt $HOME/lttng-traces/thapi-opencl-session* | head -1)
+<% elsif languages.include?("ze") %>
         lttng_last_session=$(ls -dt $HOME/lttng-traces/thapi-ze-session* | head -1)
+<% end %>
         echo "Trace location:" $lttng_last_session
         echo
     else
@@ -105,14 +146,28 @@ summary() {
 
     if [ -n "$trace" ]; then
         # Todo filter direcly in the babeltrace
+<% if languages.include?("opencl") %>
+        $bindir/babeltrace_opencl $lttng_last_session | grep lttng_ust_opencl
+<% end %>
+<% if languages.include?("ze") %>
         $bindir/babeltrace_ze $lttng_last_session | grep lttng_ust_ze
+<% end %>
     fi
 
+<% if languages.include?("opencl") %>
+    ocl_output=$(babeltrace2 --plugin-path=$libdir --component=sink.clprof.dispatch  --params="display=$display" ${lttng_last_session})
+    if [ -n "$ocl_output" ]; then
+        echo "== OpenCL == "
+        echo "$ocl_output"
+    fi
+<% end %>
+<% if languages.include?("ze") %>
     ze_output=$(babeltrace2 --plugin-path=$libdir --component=sink.zeprof.dispatch  --params="display=$display" ${lttng_last_session})
     if [ -n "$ze_output" ]; then
         echo "== Level0 == "
         echo "$ze_output"
     fi
+<% end %>
 }
 
 #  _
