--- a/ze/Makefile.am
+++ b/ze/Makefile.am
@@ -164,6 +164,10 @@ EXTRA_DIST += \
 	gen_zel_tracepoints.rb \
 	gen_probe_base.rb
 
+zeprof.sh:
+	$(ERB) -T 1 languages=["ze"] $(top_builddir)/utils/xprof.sh.erb  > $@
+	chmod a+x $@
+
 BUILT_SOURCES = $(ZE_PROBES_INCL) $(ZE_STATIC_PROBES_INCL) babeltrace_ze_callbacks.h
 
 tracer_ze.c: $(srcdir)/gen_ze.rb $(srcdir)/tracer_ze_helpers.include.c $(ZE_MODEL) $(ZE_PROBES_INCL) $(ZE_STATIC_PROBES_INCL)
